--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "vue": "^3.4.35"
+    "vue": "^3.4.35",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
