--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^5.1.2",
     "gh-pages": "^6.1.1",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-vuetify": "^2.0.4"
   }
 }
