--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^3.4.35",
+    "vue3-excel-editor": "^1.0.47",
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
